Exec Summary and notebook cleaning

--- a/FinalProject/Students-Test-Performance-Notebook-FINAL.ipynb
+++ b/FinalProject/Students-Test-Performance-Notebook-FINAL.ipynb
@@ -26,8 +26,7 @@
     "* Did show statistics about dataset and report outliers in the dataset with box-plot (IQR) visualization\n",
     "* Compared classes/groups in terms of mean, variance\n",
     "* Thorough analysis and interpretation of results including discussion of trade-offs (e.g., inductive bias of model choice, limitations of dataset, etc)\n",
-    "* Written or presented to communicate results to non-technical audience ",
-    "\n",
+    "* Written or presented to communicate results to non-technical audience\n",
     "\n",
     "\n"
    ]
@@ -39,6 +38,14 @@
     "# Problem Identification\n",
     "\n",
     "Students across the country are subject to taking standardize tests for a variety of reasons, whether its mandated by the state they live in or for college admissions. Regardless of the situation, students are put under stress to perform well on these tests and there are a variety of factors that play into whether they do or not. In this EDA we track the scores achieved by 1000 students in math, reading, and writing sections of a standardized test, in addition to some categorical data about the students. I will seek to identify if there is any correlation between these categories and the scores achieved by the students. By knowing this information, we may be able to accurately identify practices or traits that lead to achieving better test scores on standardized tests. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excutive Summary\n",
+    "Through my analysis of the data set I used count plots, box plots, heat maps, histograms, and pie charts. I used count plots in order to compare the **frequencies of occurences** based on defined criteria in each count plot. I used histograms to visualize the **distribuition of data** in relation to the mean. My box plot helped identify the **concentration of outliers** in my dataset in relation to the mean and quartiles. I felt that the dataset I used could have had more column categories in which they identified students, like extra-curicular activities or family income, time spent studying, etc.  \n"
    ]
   },
   {
@@ -223,7 +230,8 @@
     "* There is only a single dataframe\n",
     "\n",
     "### Cleaning done:\n",
-    "* Added a score average column to the dataframe: (math score, reading score, writing score)/3"
+    "* Added a score average column to the dataframe: (math score, reading score, writing score)/3\n",
+    "* Added a pass column to the dataframe: ()"
    ]
   },
   {
@@ -424,7 +432,7 @@
     "# df['race/ethnicity'].unique()\n",
     "# df['parental level of education'].unique()\n",
     "# df['lunch'].unique()\n",
-    "df['test preparation course'].unique()\n",
+    "# df['test preparation course'].unique()\n",
     "# df['math score'].unique()\n",
     "# df['reading score'].unique()\n",
     "# df['writing score'].unique()"
@@ -444,36 +452,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "y_pos = np.arange(len(df[\"parental level of education\"].unique()))"
+    "# Visualizations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.xticks(y_pos, df[\"parental level of education\"])\n",
-    "# plt.bar(y_pos, df[\"score average\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x114b16cf8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11ba8e8d0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -491,8 +487,7 @@
     }
    ],
    "source": [
-    "''' I want to make multiple bar graphs that depict the relation between most of the columns categories and the different types of test scores.'''\n",
-    "\n",
+    "'''Number of Males vs Females'''\n",
     "index = df[\"gender\"].unique()\n",
     "scores_df = df[[\"math score\",\"reading score\",\"writing score\",\"score average\"]]\n",
     "\n",
@@ -682,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -699,15 +694,10 @@
     }
    ],
    "source": [
+    "'''Box Plot Analysis for each type of test and the score average'''\n",
+    "\n",
     "scores_boxplt = scores_df.plot.box()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
