--- a/FinalProject/Students-Test-Performance-Notebook-FINAL.ipynb
+++ b/FinalProject/Students-Test-Performance-Notebook-FINAL.ipynb
@@ -21,20 +21,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## To have from rubric\n",
-    "* Correctly identifies problem as data analysis problem with interesting motivation and state why chose this project\n",
-    "* Did show statistics about dataset and report outliers in the dataset with box-plot (IQR) visualization\n",
-    "* Compared classes/groups in terms of mean, variance\n",
-    "* Thorough analysis and interpretation of results including discussion of trade-offs (e.g., inductive bias of model choice, limitations of dataset, etc)\n",
-    "* Written or presented to communicate results to non-technical audience\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Problem Identification\n",
     "\n",
     "Students across the country are subject to taking standardize tests for a variety of reasons, whether its mandated by the state they live in or for college admissions. Regardless of the situation, students are put under stress to perform well on these tests and there are a variety of factors that play into whether they do or not. In this EDA we track the scores achieved by 1000 students in math, reading, and writing sections of a standardized test, in addition to some categorical data about the students. I will seek to identify if there is any correlation between these categories and the scores achieved by the students. By knowing this information, we may be able to accurately identify practices or traits that lead to achieving better test scores on standardized tests. "
@@ -231,7 +217,7 @@
     "\n",
     "### Cleaning done:\n",
     "* Added a score average column to the dataframe: (math score, reading score, writing score)/3\n",
-    "* Added a pass column to the dataframe: ()"
+    "* Added a pass column to the dataframe: (True, False)"
    ]
   },
   {
@@ -884,20 +870,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -1197,29 +1169,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# An “Executive Summary” of Your Findings\n",
-    "* Your presentation should begin with a highly visual “executive summary” slide or page that gives a brief overview of all the important aspects about your project, including but not limited to:\n",
-    "* Where your data came from\n",
-    "* What questions you were looking to answer\n",
-    "* A brief summary of your methodology for answering these questions\n",
-    "* Graphs and other visualizations that clearly explain your findings (ideally, conclusions)\n"
+    "# Conclusions"
    ]
   },
   {
